initial ConsistencyPlus support